[gd_scene load_steps=3 format=3 uid="uid://bwsiy15hwt66y"]

[ext_resource type="Script" uid="uid://dn0oe737n3sey" path="res://Login.gd" id="1_6uxbt"]
[ext_resource type="Texture2D" uid="uid://ykode3bwq8qf" path="res://Assets/Images/UI/button_rectangleRedClose.png" id="2_uo606"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6uxbt")

[node name="Login_pnl_cont" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -110.0
offset_right = 205.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Login_pnl_cont"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Login_pnl_cont/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 4

[node name="Server_OptionButton" type="OptionButton" parent="Login_pnl_cont/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
selected = 1
item_count = 3
popup/item_0/text = "Localhost"
popup/item_0/id = 0
popup/item_1/text = "Ubuntu22"
popup/item_1/id = 1
popup/item_2/text = "Ubuntu24"
popup/item_2/id = 2

[node name="Email" type="LineEdit" parent="Login_pnl_cont/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "some_email@someplace.nul"
placeholder_text = "Email"
alignment = 1

[node name="Displayname" type="LineEdit" parent="Login_pnl_cont/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "some_user"
placeholder_text = "Display Name"
alignment = 1

[node name="Password" type="LineEdit" parent="Login_pnl_cont/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "some_password"
placeholder_text = "Password"
alignment = 1
secret = true

[node name="Spacer" type="Control" parent="Login_pnl_cont/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Submit_btn" type="Button" parent="Login_pnl_cont/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="Register" type="CheckBox" parent="Login_pnl_cont/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Register"

[node name="Exit_btn" type="Button" parent="Login_pnl_cont/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="PopupMsg_panel" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="PanelContainer" type="PanelContainer" parent="PopupMsg_panel"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
offset_left = 376.0
offset_top = 224.0
offset_right = 776.0
offset_bottom = 424.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PopupMsg_panel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PopupMsg_RTL" type="RichTextLabel" parent="PopupMsg_panel/PanelContainer/MarginContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
text = "test dfgfgdfgdfg "
fit_content = true
autowrap_mode = 2

[node name="PopupMsgClose_tbtn" type="TextureButton" parent="PopupMsg_panel/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("2_uo606")
texture_pressed = ExtResource("2_uo606")
texture_hover = ExtResource("2_uo606")
texture_disabled = ExtResource("2_uo606")
texture_focused = ExtResource("2_uo606")

[connection signal="item_selected" from="Login_pnl_cont/MarginContainer/VBoxContainer/Server_OptionButton" to="." method="_on_server_option_button_item_selected"]
[connection signal="pressed" from="Login_pnl_cont/MarginContainer/VBoxContainer/Submit_btn" to="." method="_on_submit_btn_pressed"]
[connection signal="toggled" from="Login_pnl_cont/MarginContainer/VBoxContainer/Register" to="." method="_on_register_toggled"]
[connection signal="pressed" from="Login_pnl_cont/MarginContainer/VBoxContainer/Exit_btn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="PopupMsg_panel/PanelContainer/PopupMsgClose_tbtn" to="." method="_on_popup_msg_close_tbtn_pressed"]
